--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,4 @@ jobs:
       START_DATE: ${{ secrets.START_DATE }}
       BIRTHDAY: ${{ secrets.BIRTHDAY }}
       CITY: ${{ secrets.CITY }}
+      USER_ID2: ${{ secrets.USER_ID2 }}
